partly documented all files

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -38,7 +38,31 @@ known_files <- list(readme = list(file_name = "readme.Rmd",
                     aa_properties = list(file_name = "aa_properties.R",
                                    descr = "Extract from seqinr package AAIndex data, annotate it partially and save."),
                     all_sizes = list(file_name = "all_sizes.csv",
-                                   descr = "Created by ngram_analysis.R, contains important n-grams and their properties in amyloids and non-amyloids.")
+                                   descr = "Created by ngram_analysis.R, contains important n-grams and their properties in amyloids and non-amyloids."),
+                    amyloid_data = list(file_name = "amyloid_data.csv",
+                                   descr = "Data set from Gasior, Kotulska 2015."),
+                    amyloid_data_extraction = list(file_name = "amyloid_data_extraction.R",
+                                   descr = "Extraction of data from amyloid_data.csv, some machine learning. Done for presentation.Rnw"),
+                    amyloid_fold_res2 = list(file_name = "amyloid_fold_res2.RData",
+                                   descr = "Results of cross-validation of the amyloid data done for report3."),
+                    amyloid_fold_res = list(file_name = "amyloid_fold_res.RData",
+                                   descr = "Results of cross-validation of the amyloid data done for report2."),
+                    amyloid_present_bib = list(file_name = "amyloid_present.bib",
+                                   descr = "Bibliography for amyloid presentation."),
+                    amyloid_seqs = list(file_name = "amyloid_seqs.RData",
+                                   descr = "Created by amyloid_data_extraction.R and used in presentation."),
+                    aoc = list(file_name = "aoc.R",
+                                   descr = "Areas of the competence for classifiers."),
+                    aoc_data = list(file_name = "aoc.RData",
+                                   descr = "Areas of the competence for classifiers - data for presentation."),
+                    bigger6 = list(file_name = "bigger6.csv",
+                                   descr = "Important n-grams extracted from sequences longer than 6."),
+                    bigram_analysis = list(file_name = "bigram_analysis.R",
+                                   descr = "Analysis of bigrams for presentation."),
+                    bigram_analysis_data = list(file_name = "bigram_analysis.RData",
+                                   descr = "Data from analysis of bigrams for presentation."),
+                    casualRF = list(file_name = "casualRF.R",
+                                   descr = "Random forests on amyloid sequences without encoding.")
 )
 
 known_files_names <- sapply(known_files, function(i) i[["file_name"]])
